# simple-rdbms

./: .gitignore  CMakeLists.txt  README.md
docs/: index.html
src/: ast.h  catalog.c  catalog.h  errors.h  index.c  index.h  lexer.c  lexer.h  main.c  parser.c  parser.h  repl.c  repl.h  row.c  row.h  sql.c  sql.h  storage.c  storage.h  table.c  table.h  util.c  util.h
src/libs/: stb_c_lexer.h
tests/: basic_rdbms_test.php  constraint_test.php  describe_index_test.php  dml_join_test.php  integration_test.php  utils.php
web/: db_handler.php  index.php  init.php  init_db.php  setup_dummy_db.php
web/api/: books.php  users.php
web/js/: api.js  app.js  modals.js
